added google font

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architect</title>
 </head>
-<body>
+<body class="work-sans-font">
         <header>
+
+            <nav class="nav-bar">
+                <h3 class="brand">G3 Architect</h3>
+            </nav>
 
         </header>
         <main>
@@ -14,7 +18,7 @@
         </main>
 
         <footer>
-            
+
         </footer>
 </body>
 </html>
